# template_application

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_backend.sh  run_frontend.sh
.agent/: user_rules.md
.agent/skills/api-security-best-practices/: SKILL.md
.agent/skills/backend/: SKILL.md
.agent/skills/frontend/: SKILL.md
.agent/skills/frontend-security-coder/: SKILL.md
.agent/skills/terraform/: SKILL.md
.agent/workflows/: commit-only.md  commit-push-pr.md  commit-push.md
.cursor/: mcp.json
.cursor/agents/: backend.md  frontend.md  terraform.md
.cursor/commands/: commit-only.md  commit-push-pr.md  commit-push.md
.cursor/rules/: coding_style.mdc  global.mdc  pr-message-format.mdc  prompt-injection-guard.mdc  v5.mdc
.cursor/skills/3d-web-experience/: SKILL.md
.cursor/skills/agent-manager-skill/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ai-pr-reviewer.yml  benchmark.yml  ci-backend.yml  ci-frontend.yml  deploy.yml
backend/: Dockerfile  client.py  config.py  main.py
backend/routers/: agent.py  audio.py  document.py  embedding.py  function_calling.py  image.py  structured_output.py  text.py  video.py
deploy/: README.md  deploy_cloudrun.sh  run_and_test.sh  stop.sh
deploy/terraform/: install_terraform.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+45 files in other folders)
